# glaze

./: CMakeLists.txt  CMakePresets.json  modules-plan.md
.devcontainer/: Dockerfile  devcontainer.json
fuzzing/: build_and_run_fuzzers.sh
include/glaze/: csv.hpp  glaze.cppm  module_support.hpp
include/glaze/csv/: read.hpp
include/glaze/json/: read.hpp  write.hpp
include/glaze/util/: dragonbox.hpp  fast_float.hpp
src/: glaze.csv.cppm
tests/: CMakeLists.txt
tests/csv_test/: CMakeLists.txt
tests/json_test/: json_test.cpp
tests/module_import/: CMakeLists.txt  csv_module_test.cpp
